objects/Case.object
<CustomObject>
    <fields>
        <fullName>Auction_Start_Time__c</fullName>
        <formula>Auction_Number__r.start_time__c</formula>
        <label>Auction Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BOL_Link__c</fullName>
        <description>Link to BOL stored on AWS S3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BOL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BOL_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOL Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back_End_Flag_Buyer__c</fullName>
        <formula>IF(ISPICKVAL( Back_End_Status_Buyer__c, &quot;Refund buyer when the title is returned&quot;) ,IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a000003PBb4&quot;, &quot;Blue&quot;, 25, 25), 
IF(ISPICKVAL(Back_End_Status_Buyer__c, &quot;Refund complete&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a000003PKLE&quot;, &quot;Checkered&quot;, 25,25), 
IF(ISPICKVAL(Back_End_Status_Buyer__c, &quot;No refund needed&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a000003PKLE&quot;, &quot;Checkered&quot;, 25, 25), 
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back End Flag Buyer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_Flag_Seller__c</fullName>
        <formula>IF(ISPICKVAL( Back_End_Status_Seller__c, &quot;Seller has been Invoiced&quot;) ,IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a000003PBb9&quot;, &quot;Yellow&quot;, 25, 25), 
IF(ISPICKVAL(Back_End_Status_Seller__c, &quot;Pay seller when title arrives&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a000003PBb7&quot;, &quot;Purple&quot;, 25,25), 
IF(ISPICKVAL(Back_End_Status_Seller__c, &quot;Invoice Seller Double Sell Fee&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a000003PBb5&quot;, &quot;Green&quot;, 25, 25), 
IF(ISPICKVAL(Back_End_Status_Seller__c, &quot;Paid complete&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a000003PKLE&quot;, &quot;Checkered&quot;, 25, 25),
IF(ISPICKVAL(Back_End_Status_Seller__c, &quot;No Payment Necessary&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a000003PKLE&quot;, &quot;Checkered&quot;, 25, 25), 
&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back End Flag Seller</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_Status_Buyer__c</fullName>
        <label>Back End Status Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No refund needed</fullName>
                </value>
                <value>
                    <fullName>Refund buyer when the title is returned</fullName>
                </value>
                <value>
                    <fullName>Refund complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_End_Status_Seller__c</fullName>
        <description>Picklist for unwinds back end processing</description>
        <label>Back End Status Seller</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seller has been invoiced</fullName>
                </value>
                <value>
                    <fullName>Pay seller when title arrives</fullName>
                </value>
                <value>
                    <fullName>Invoice Seller Double Sell Fee</fullName>
                </value>
                <value>
                    <fullName>Paid complete</fullName>
                </value>
                <value>
                    <fullName>No Payment Necessary</fullName>
                </value>
                <value>
                    <fullName>Awaiting Title</fullName>
                    <isActive>false</isActive>
                    <label>Awaiting Title</label>
                </value>
                <value>
                    <fullName>Issue</fullName>
                    <isActive>false</isActive>
                    <label>Issue</label>
                </value>
                <value>
                    <fullName>Refund buyer when title is returned</fullName>
                    <isActive>false</isActive>
                    <label>Refund buyer when title is returned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <description>The Batch Id generated by the Titles Cron when a title is sent to the entitled-beta inbox from a user scanning it. It uses the current time, user, scanner, and current date. Primarily used to mass assign titles to a specific user.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inbound Batch Id</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branded_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branded_Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Days_Since_Opened__c</fullName>
        <description>Calculates the number of business days between the current date, and the date the Case was opened. Once the Case is closed, it reflects the Resolution Time in business days.</description>
        <formula>IF(IsClosed = false,((Business_Hours_Since_Opened__c*60)/480),Resolution_Time_Business_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates how many business days a Case has been open. Once the Case is closed, it reflects the Resolution Time in business days.</inlineHelpText>
        <label>Business Days Since Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Days_Spent_in_Queue__c</fullName>
        <formula>(Business_Hours_Spent_in_Queue__c*60)/480</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days Spent in Queue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Since_Opened__c</fullName>
        <formula>IF(IsClosed=false,(ROUND( 
8 * 
(
( 5 * FLOOR( ( DATEVALUE(NOW()) - DATE( 2017,1,2) ) / 7) +
MIN(5, 
MOD( DATEVALUE(NOW()) - DATE( 2017,1,2), 7) +
MIN( 1, 24 / 8 * ( MOD( NOW() - DATETIMEVALUE( &apos;2017-01-02 14:00:00&apos; ), 1 ) ) )
) 
)
-
( 5 * FLOOR( ( DATEVALUE(CreatedDate) - DATE( 2017,1,2) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate ) - DATE( 2017,1,2), 7 ) +
MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;2017-01-02 14:00:00&apos; ), 1) ) )
)
) 
), 
MOD((NOW() - DATETIMEVALUE(&apos;2017-01-02 14:00:00&apos;))*1440,1440)/60)),Resolution_Time_Business_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Hours Since Opened</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Spent_in_Queue__c</fullName>
        <description>Formula to calculate the number of business hours a Case was assigned to a Queue.</description>
        <formula>IF(
ISBLANK(Date_Time_Removed_from_Queue__c),

(ROUND( 
8 * 
( 
( 5 * FLOOR( ( DATEVALUE(NOW()) - DATE( 2017,1,2) ) / 7) + 
MIN(5, 
MOD( DATEVALUE(NOW()) - DATE( 2017,1,2), 7) + 
MIN( 1, 24 / 8 * ( MOD(NOW() - DATETIMEVALUE( &apos;2017-01-02 14:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE(Date_Time_Assigned_to_Queue__c) - DATE( 2017,1,2) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( Date_Time_Assigned_to_Queue__c ) - DATE( 2017,1,2), 7 ) + 
MIN( 1, 24 / 8 * ( MOD( Date_Time_Assigned_to_Queue__c - DATETIMEVALUE( &apos;2017-01-02 14:00:00&apos; ), 1) ) ) 
) 
) 
), 
MOD((NOW()- DATETIMEVALUE(&apos;2017-01-02 14:00:00&apos;))*1440,1440)/60)),

(ROUND( 
8 * 
( 
( 5 * FLOOR( ( DATEVALUE(Date_Time_Removed_from_Queue__c) - DATE( 2017,1,2) ) / 7) + 
MIN(5, 
MOD( DATEVALUE(Date_Time_Removed_from_Queue__c) - DATE( 2017,1,2), 7) + 
MIN( 1, 24 / 8 * ( MOD(Date_Time_Removed_from_Queue__c - DATETIMEVALUE( &apos;2017-01-02 14:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE(Date_Time_Assigned_to_Queue__c) - DATE( 2017,1,2) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( Date_Time_Assigned_to_Queue__c ) - DATE( 2017,1,2), 7 ) + 
MIN( 1, 24 / 8 * ( MOD( Date_Time_Assigned_to_Queue__c - DATETIMEVALUE( &apos;2017-01-02 14:00:00&apos; ), 1) ) ) 
) 
) 
), 
MOD((Date_Time_Removed_from_Queue__c - DATETIMEVALUE(&apos;2017-01-02 14:00:00&apos;))*1440,1440)/60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Hours Spent in Queue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy_Fee__c</fullName>
        <formula>Auction_Number__r.buy_fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyer_Called_to_Request_48_Hour_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the buyer called to initiate the 48 Hour Notice</description>
        <inlineHelpText>Has the buyer called to initiate the 48 Hour Notice?</inlineHelpText>
        <label>Buyer Called to Request 48 Hour Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Confusion__c</fullName>
        <inlineHelpText>Select “Yes” if buyer brings up confusion over green light policy</inlineHelpText>
        <label>Buyer Confusion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buyer_Date_of_Last_Purchase__c</fullName>
        <formula>Account.Date_of_Last_Purchase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Date of Last Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account record for the buyer, person who will get delivery of vehicle</description>
        <label>Buyer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Buyer Dealership)</relationshipLabel>
        <relationshipName>Buyer_Transportation_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_External_Id__c</fullName>
        <formula>Account.Dealership_ID__c</formula>
        <label>Buyer External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_IST_Account_Owner__c</fullName>
        <formula>Account.IST_Account_Owner__r.FirstName &amp; &quot; &quot; &amp;  Account.IST_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer IST Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_IST_Email__c</fullName>
        <description>Auto populates via workflow to stamp the buying dealership&apos;s IST account manager.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Buyer IST Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Buyer_Legal_Address__c</fullName>
        <formula>Account.Legal_Street__c &amp; br() &amp;
Account.Legal_City__c &amp; &quot;, &quot; &amp; Account.Legal_State__c &amp; &quot; &quot; &amp; Account.Legal_Zip_Code__c &amp; br() &amp;
Account.Legal_Country__c</formula>
        <label>Buyer Legal Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Mailing_Address__c</fullName>
        <formula>Account.BillingStreet &amp; br() &amp;
Account.BillingCity &amp; &quot;, &quot; &amp; Account.BillingState &amp; &quot; &quot; &amp; Account.BillingPostalCode &amp; br() &amp;
Account.BillingCountry</formula>
        <label>Buyer Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Buyer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Notes__c</fullName>
        <description>Field to enter buyer notes on unwinds case</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Buyer Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buyer_Payment_Changed__c</fullName>
        <description>Field looks at the Prior payment method on the auction which is populated via a workflow rule and field update.</description>
        <formula>IF(ISBLANK( Auction_Number__r.Prior_payment_Method__c),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked box indicates the Buyer Payment method was changed from original selection.</inlineHelpText>
        <label>Buyer Payment Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Payment_Hold_Status__c</fullName>
        <description>Tile hold field from account surfacing on the title case for visability.</description>
        <formula>TEXT(Account.Title_Hold__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Title hold field from the Account record of the Buying dealership.</inlineHelpText>
        <label>Buyer Payment Hold Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Payment_Status_Timestamp__c</fullName>
        <formula>Auction_Number__r.Payment_Status_Timestamp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Payment Status Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Buyer_Payment__c</fullName>
        <description>payment method and Status in on field for quick Clerking list view</description>
        <formula>Buyer_payment_Method_1__c +&quot;/&quot;+ Payment_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Payment method/Payment Status</inlineHelpText>
        <label>Buyer Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Pickup_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Buyer Pickup Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buyer_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount charged to buyer for transportation service</description>
        <inlineHelpText>Price charged to customer for ACV arranged transportation of vehicle</inlineHelpText>
        <label>Buyer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyer_Profile__c</fullName>
        <description>If Buyer Profile is Limited, this is a dealer who ACV considers a problem dealer</description>
        <formula>Account.Buyer_Profile_from_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this Dealership is noted as &quot;LIMITED&quot;  the Dealer needs to be reviewed before moving forward with the auction.</inlineHelpText>
        <label>Buyer Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Refund_Amount__c</fullName>
        <description>Field to enter buyer refund value</description>
        <label>Buyer Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyer_Refund_Date__c</fullName>
        <description>Field to enter buyer refund date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Buyer Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Requested_Arb_Amount__c</fullName>
        <label>Buyer Requested Arb Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyer_Response_Due_Date__c</fullName>
        <description>Used in workflow Rule</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The buyer has been asked to provide information, if status is still &quot;Awaiting Buyer Response&quot; on this date, buyer will receive notification that we are waiting for a response</inlineHelpText>
        <label>Buyer Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Territory__c</fullName>
        <formula>Account.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Tracking_Number__c</fullName>
        <description>Tracking Number for the Buyer to track the title arrival</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Tracking Number for the Buyer to track the title arrival</inlineHelpText>
        <label>Buyer Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_and_Account_Match__c</fullName>
        <formula>AccountId == Auction_Number__r.buyer_dealership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer and Account Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_payment_Method_1__c</fullName>
        <formula>Auction_Number__r.payment_method__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_s_Assurance_Exceptions__c</fullName>
        <description>Used for New Buyer&apos;s Assurance Upsell Strategy</description>
        <inlineHelpText>First time offense = &quot;Goodwill&quot; 
Second time offense = &quot;Retro Charge&quot; 
Third time offense = &quot;Deny&quot;</inlineHelpText>
        <label>Buyer&apos;s Assurance Exceptions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Goodwill</fullName>
                </value>
                <value>
                    <fullName>Retro Charge</fullName>
                </value>
                <value>
                    <fullName>Deny</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName &amp; &quot; &quot; &amp; Account.Owner.LastName</formula>
        <inlineHelpText>Account Owner for Buyer</inlineHelpText>
        <label>Buying Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Spotchecked__c</fullName>
        <description>Absence of data indicates no spot check completed.</description>
        <inlineHelpText>Absence of data indicates no spot check completed.</inlineHelpText>
        <label>CR Spot Checked</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Corrections Made</fullName>
                </value>
                <value>
                    <fullName>Some Corrections Made</fullName>
                </value>
                <value>
                    <fullName>No Corrections Made</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capital_Alt_Email_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Capital Alt Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Capital_Alt_Email_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Capital Alt Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Capital_Alt_Email_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Capital Alt Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Capital_Dealer_Flag__c</fullName>
        <formula>IF( ISPICKVAL( Account.Capital_Dealer_Type__c , &quot;Capital Orange Elite&quot;),
IMAGE(&quot;https://acvauctions--uat--c.documentforce.com/servlet/servlet.ImageServer?id=01501000000HfAq&amp;oid=00D010000004b0z&amp;lastMod=1633012136000&quot;, &quot;Orange&quot;, 30, 30),NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capital Dealer Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Payment_Executed_By__c</fullName>
        <description>Created as part of CAP-465 - Used by Capital to track when payments have been executed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Capital Payment Executed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Payment_Executed_Date__c</fullName>
        <description>Created as part of CAP-465</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Capital Payment Executed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Capital_Payment_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of CAP-465 - Used by Capital to track when payments have been executed</description>
        <label>Capital Payment Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_Title_Borrowed_Date__c</fullName>
        <description>Date ACV Capital Title status marked as Borrowed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date ACV Capital Title status marked as Borrowed</inlineHelpText>
        <label>Capital Title Borrowed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capital_Title_Received_Date__c</fullName>
        <description>Date ACV Capital Title status marked as Received</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date ACV Capital Title status marked as Received</inlineHelpText>
        <label>Capital Title Received  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capital_Title_Received_to_Floor_Sent__c</fullName>
        <formula>Capital_Title_Received_Date__c -  Capital_Title_Sent_to_Floor_Plan_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Capital Title days from Received to Floor Sent</inlineHelpText>
        <label>Capital Title Received to Floor Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capital_Title_Received_to_Sent__c</fullName>
        <description>Days from Capital title Status Received to Sent</description>
        <formula>Capital_Title_Received_Date__c - Capital_Title_Sent_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days from Capital title Status Received to Sent</inlineHelpText>
        <label>Capital Title Received to Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capital_Title_Received_to_Sent_to_Floor__c</fullName>
        <formula>Capital_Title_Borrowed_Date__c - Capital_Title_Sent_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Capital Title number of Days from Borrowed to Sent</inlineHelpText>
        <label>Capital Title Received to Sent to Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capital_Title_Sent_Date__c</fullName>
        <description>Date the Status of ACV Capital title was marked as sent</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the Status of ACV Capital title was marked as sent</inlineHelpText>
        <label>Capital Title Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capital_Title_Sent_to_Floor_Plan_Date__c</fullName>
        <description>Date ACV Capital Title status marked as Sent to Floor Plan</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date ACV Capital Title status marked as Sent to Floor Plan</inlineHelpText>
        <label>Capital Title Sent to Floor Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capital_Title_Status_Last_Updated_By__c</fullName>
        <description>updated by workflow rule.  visible only to capital profiles</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Capital Title Status Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafe_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafe_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Created_Time_GMT__c</fullName>
        <description>This field only displays GMT time, which is four hours in advance of EST. Keep this in mind when using for reporting. TimeValue function temporarily removed because it was causing integration error.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field only displays GMT time, which is four hours in advance of EST. Keep this in mind when using for reporting.</inlineHelpText>
        <label>Case Created Time (GMT)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Link__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; + Id,  CaseNumber , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_guid__c</fullName>
        <description>GUID generated in Salesforce to identify this unique Case Record across Datahub systems</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Case guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Claim_Manually_Submitted_Date__c</fullName>
        <description>If a dealer makes an arbitration claim via the app, this will auto populate to the case created date.  If they submit via phone or email and an employee manually creates the arb case, the user will be required to enter the true date that the claim was requested.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>When manually entering an arb claim, please fill in the date the dealer made the request - the date they placed the phone call or email.</inlineHelpText>
        <label>Claim Manually Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courier_Service__c</fullName>
        <label>Courier Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Shipped</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>US Mail</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Grade__c</fullName>
        <formula>TEXT(Account.Customer_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Title problems set.</description>
        <label>Damaged Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Delivered_Actual__c</fullName>
        <description>Date on which transportation job was delivered as stated in the content of the CD &quot;Delivered&quot; email</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>True, actual date of delivery. Often populated days or weeks after delivery was made.</inlineHelpText>
        <label>Date Delivered Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Estimated_Pick_Up__c</fullName>
        <description>Estimated Pick up date for transportation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Estimated Pick Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Accepted__c</fullName>
        <description>Date when it was first accepted in Central Dispatch</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date First Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Posted_Portal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date First Posted Portal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_First_Posted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date First Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Accepted__c</fullName>
        <description>date when case / job was last accepted in CD. Value will be different than &apos;Date First Accepted&apos; if job has been cancelled after being accepted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Last Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Posted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Last Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Picked_Up__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Picked Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Referred_to_Collections_Agency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required if Referred to Collections Agency Box is checked</inlineHelpText>
        <label>Date Referred to Collections Agency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Referred_to_Investigator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required when the Referred to Investigator Box is Checked</inlineHelpText>
        <label>Date Referred to Investigator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Relaunch_Sale_Posted__c</fullName>
        <description>Populated via workflow when either Relaunch Auction ID or Relaunch Sale Price are populated on the case record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Relaunch Sale Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Signed_Document_Returned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the Signed Repayment Plan Document was Returned to ACV</inlineHelpText>
        <label>Date Signed Document Returned</label>
        <type>Date</type>
    </fields>
</CustomObject>